added some color to our header

--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body {
 .header {
   display: flex;
   justify-content: center;
-  background-color: cadetblue;
+  background-color: darkslategray;
+  color: aliceblue;
 }
 
 .btns {
