--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ body {
 
 button {
   width: 200px;
-  padding: 10px
+  padding: 10px;
+  background-color: lightcyan;
 }
 
 .container {
@@ -34,7 +35,7 @@ button {
 }
 
 .grid-container {
-  background-color: white;
+  background-color: #ffffffd1;
   display: grid;
   grid-template-rows: repeat(var(--grid-rows), 1fr);
   grid-template-columns: repeat(var(--grid-cols), 1fr);
